[gd_scene load_steps=13 format=3 uid="uid://blo4naqhgbpih"]

[ext_resource type="PackedScene" uid="uid://cdy1mw5vvp0cw" path="res://TSCN/Entities/level_manager.tscn" id="1_7wrhu"]
[ext_resource type="Script" path="res://Scripts/Game.gd" id="1_b8h8t"]
[ext_resource type="PackedScene" uid="uid://kqr1e3fjfah3" path="res://TSCN/Entities/trash_collector.tscn" id="2_lw45a"]
[ext_resource type="PackedScene" uid="uid://d3kxbhkefjdle" path="res://TSCN/Entities/ui.tscn" id="3_g7oda"]
[ext_resource type="Script" path="res://Scripts/Levels/level_manager.gd" id="3_na4yn"]
[ext_resource type="PackedScene" uid="uid://c461p4lw5q1t7" path="res://TSCN/Entities/upgrade_shop.tscn" id="4_akoic"]
[ext_resource type="PackedScene" uid="uid://bwwngnhll20if" path="res://TSCN/Entities/health_manager.tscn" id="5_5qwbf"]
[ext_resource type="AudioStream" uid="uid://dbwqruwed2vru" path="res://Assets/Audio/Retro PickUp 18.wav" id="5_korpq"]
[ext_resource type="AudioStream" uid="uid://clyoxglo3053r" path="res://Assets/Audio/033_Denied_03.wav" id="6_aeaqk"]
[ext_resource type="AudioStream" uid="uid://wqwcrewy2bri" path="res://Assets/Audio/051_use_item_01.wav" id="7_f8x08"]
[ext_resource type="Script" path="res://Resources/PlayerData/PlayerData.gd" id="8_7jy6w"]
[ext_resource type="AudioStream" uid="uid://b6eynfj7rmwqg" path="res://Assets/Audio/079_Buy_sell_01.wav" id="8_nr12u"]

[node name="Game" type="Node"]
script = ExtResource("1_b8h8t")

[node name="LevelManager" parent="." instance=ExtResource("1_7wrhu")]
script = ExtResource("3_na4yn")

[node name="TrashCollector" parent="." instance=ExtResource("2_lw45a")]

[node name="PickTrash" type="AudioStreamPlayer" parent="TrashCollector"]
stream = ExtResource("5_korpq")
volume_db = -20.0

[node name="CantPick" type="AudioStreamPlayer" parent="TrashCollector"]
stream = ExtResource("6_aeaqk")
volume_db = -20.0

[node name="Delivered" type="AudioStreamPlayer" parent="TrashCollector"]
stream = ExtResource("7_f8x08")
volume_db = -10.0

[node name="AddCash" type="AudioStreamPlayer" parent="TrashCollector"]
stream = ExtResource("8_nr12u")
volume_db = -15.0

[node name="UI" parent="." instance=ExtResource("3_g7oda")]

[node name="UpgradeShop" parent="." instance=ExtResource("4_akoic")]

[node name="HealthManager" parent="." instance=ExtResource("5_5qwbf")]

[node name="PlayerData" type="Node" parent="."]
script = ExtResource("8_7jy6w")
polygon_left = PackedVector2Array(-128, 82, -10, 13, -10, 7, -132, -44)
polygon_right = PackedVector2Array(128, 82, 10, 13, 10, 7, 132, -44)
light_left = Vector2(-16, 12)
light_right = Vector2(16, 12)
boost_time = 0.5
boost_recovery = 4.0
money = 0

[connection signal="can_buy_something" from="LevelManager" to="." method="_on_level_manager_can_buy_something"]
[connection signal="level_completed" from="LevelManager" to="." method="_on_level_manager_level_completed"]
